--- a/views/works-page.html
+++ b/views/works-page.html
@@ -7,5 +7,31 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <title>Works</title>
   </head>
-  <body></body>
+  <body>
+    <header class="about-header">Works</header>
+    <section class="about-container">
+      <article>
+        <div class="description-container">
+          <h2>This is what she does:</h2>
+          <p>sleeping all day long and...</p>
+        </div>
+        <div class="image-container">
+          <img src="/images/sleeping.jpeg" alt="cat in a suitcase" />
+        </div>
+      </article>
+
+      <article>
+        <div class="image-container">
+          <img
+            src="/images/news-enthusiast.jpeg"
+            alt="cat sleeping in a suitcase"
+          />
+        </div>
+        <div class="description-container">
+          <h2>staying informed about what is going on in the world</h2>
+        </div>
+      </article>
+      <a class="about-btn" href="/">Homepage</a>
+    </section>
+  </body>
 </html>
